--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,4 +8,4 @@
 @using Microsoft.JSInterop
 @using BlazorVoice
 @using BlazorVoice.Components
-@using MudBlazor // Add MudBlazor namespace
+@using MudBlazor
