--- a/Components/App.razor
+++ b/Components/App.razor
@@ -9,16 +9,17 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="BlazorVoice.styles.css" />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />    
-    <link rel="stylesheet" href="_content/MudBlazor/MudBlazor.min.css" /> <!-- Add MudBlazor CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="RenderMode.InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script> <!-- Add MudBlazor JS -->
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
