--- a/Components/Layout/MyNavMenu.razor
+++ b/Components/Layout/MyNavMenu.razor
@@ -3,8 +3,7 @@
     <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix">Counter</MudNavLink>
     <MudNavLink Href="/weather" Match="NavLinkMatch.Prefix">Weather</MudNavLink>
 
-    <MudNavGroup Title="Settings" Expanded="true">
-        <MudNavLink Href="/users" Match="NavLinkMatch.Prefix">Users</MudNavLink>
-        <MudNavLink Href="/security" Match="NavLinkMatch.Prefix">Security</MudNavLink>
+    <MudNavGroup Title="TechDemo" Expanded="true">
+        <MudNavLink Href="/web-rtc" Match="NavLinkMatch.Prefix">Voice LLM</MudNavLink>        
     </MudNavGroup>
 </MudNavMenu>
