--- a/Components/Layout/MyNavMenu.razor
+++ b/Components/Layout/MyNavMenu.razor
@@ -1,9 +1,13 @@
 ﻿<MudNavMenu>    
     <MudNavLink Href="/" Match="NavLinkMatch.All">Dashboard</MudNavLink>
-    <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix">Counter</MudNavLink>
-    <MudNavLink Href="/weather" Match="NavLinkMatch.Prefix">Weather</MudNavLink>
-
+    
     <MudNavGroup Title="TechDemo" Expanded="true">
         <MudNavLink Href="/web-rtc" Match="NavLinkMatch.Prefix">Voice LLM</MudNavLink>        
+    </MudNavGroup>
+
+
+    <MudNavGroup Title="TEST-UI" Expanded="false">
+        <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix">Counter</MudNavLink>
+        <MudNavLink Href="/weather" Match="NavLinkMatch.Prefix">Weather</MudNavLink>
     </MudNavGroup>
 </MudNavMenu>
