--- a/Components/Pages/WebRTC.razor
+++ b/Components/Pages/WebRTC.razor
@@ -16,7 +16,7 @@
     </MudItem>
     <MudItem xs="6">
         <MudPaper Class="d-flex align-center justify-center mud-width-full py-8">
-            <video id="localVideo" autoplay muted style="width: 20%; border-radius: 8px;"></video>
+            <video id="localVideo" autoplay muted style="width: 50%; border-radius: 8px;"></video>
         </MudPaper>
     </MudItem>
 
@@ -133,9 +133,8 @@
         Console.WriteLine("Blazor에서 오디오 재생 완료 이벤트 처리");
         // 추가 작업 수행 가능
 
-        var msg = OpenAIService.GetLastAiMessage();
-
-        ChatMessages.Add($"[AI 응답] {msg}");
+        var msg = OpenAIService.GetLastAiMessage();        
+        AddMessage("AI", msg);
 
         var recVoice = await OpenAIService.ConvertTextToVoiceAsync(msg); // TTS 처리
 
@@ -172,8 +171,8 @@
     private async Task HandleEchoTTS(string message)
     {
         // EchoTTS 처리 로직
-        //await JSRuntime.InvokeVoidAsync("playTextAsSpeech", message);
-        ChatMessages.Add($"[Human] {message}");
+        //await JSRuntime.InvokeVoidAsync("playTextAsSpeech", message);        
+        AddMessage("Human", message);
 
         var dotNetRef = DotNetObjectReference.Create(this);
         var recVoice = await OpenAIService.ConvertTextToVoiceWithLLMAsync(message); // TTS 처리
@@ -181,14 +180,19 @@
         await JSRuntime.InvokeVoidAsync("playAudioBytes", recVoice, 0.5f, 1, dotNetRef);
 
         StateHasChanged(); // UI 업데이트
-        
+
     }
 
     private async Task HandleTTSToLLM(string message)
     {
         // TTS to LLM 처리 로직
         //var response = await OpenAIService.GetResponseFromLLM(message);
-        ChatMessages.Add($"[LLM 응답] {message}");
+        AddMessage("AI", message);
+    }
+
+    private void AddMessage(string from, string message)
+    {
+        ChatMessages.Add($"[{from}] {message} - {DateTime.Now.ToString("HH:mm:ss")}");
     }
 
 }
