--- a/Components/Pages/WebRTC.razor
+++ b/Components/Pages/WebRTC.razor
@@ -86,18 +86,22 @@
 
         string voiceChatActorKey = $"VoiceChatActor-{UserId}";
 
-        var voiceCahtActor = AkkaService.GetActor(voiceChatActorKey);
-
         var actorSystem = AkkaService.GetActorSystem();
+
+        var voiceCahtActor = AkkaService.GetActor(voiceChatActorKey);        
 
         if(voiceCahtActor==null)
         {
-            // VoiceChatActor가 없으면 생성
+            // VoiceChatActor가 없으면 생성 - 비식별 세션별단위로 생성
             voiceCahtActor = actorSystem.ActorOf(Props.Create(() => 
                 new VoiceChatActor(ServiceProvider)), UserId);
 
             AkkaService.AddActor(voiceChatActorKey, voiceCahtActor);
         }
+
+
+        voiceCahtActor.Tell(CreateDynamicDelegate());
+
     }
 
     private async Task StartWebRTC()
@@ -217,7 +221,35 @@
 
     private void AddMessage(string from, string message)
     {
-        ChatMessages.Add($"[{from}] {message} - {DateTime.Now.ToString("HH:mm:ss")}");
+        InvokeAsync(() =>
+        {
+            ChatMessages.Add($"[{from}] {message} - {DateTime.Now:HH:mm:ss}");
+            StateHasChanged(); // UI 업데이트
+        });        
+    }
+
+    private Action<string, object[]> CreateDynamicDelegate()
+    {
+        return (methodName, args) =>
+        {
+            // Blazor 컴포넌트의 메서드 찾기
+            var method = GetType().GetMethod(methodName, System.Reflection.BindingFlags.Instance | System.Reflection.BindingFlags.NonPublic | System.Reflection.BindingFlags.Public);
+            if (method == null)
+            {
+                Console.WriteLine($"Method '{methodName}' not found.");
+                return;
+            }
+
+            try
+            {
+                // 메서드 호출
+                method.Invoke(this, args);
+            }
+            catch (Exception ex)
+            {
+                Console.WriteLine($"Error invoking method '{methodName}': {ex.Message}");
+            }
+        };
     }
 
 }
