--- a/Components/App.razor
+++ b/Components/App.razor
@@ -21,7 +21,29 @@
     <Routes @rendermode="RenderMode.InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-    <script src="js/webrtc.js"></script>    
+    <script src="js/webrtc.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/live2d-widget@3.1.4/lib/L2Dwidget.min.js"></script>
+    <script>
+        L2Dwidget.init({
+          "model": {
+            "jsonPath": "https://cdn.jsdelivr.net/gh/evrstr/live2d-widget-models/live2d_evrstr/koharu/model.json"
+          },
+          "display": {
+            "position": "left",
+            "width": 85,
+            "height": 200,
+            "hOffset": 60,
+            "vOffset": 40
+          },
+          "mobile": {
+            "show": true,
+            "scale": 0.3,
+            "motion": true
+          }
+        });
+    </script>
+
 </body>
 
 </html>
